feat: add subtask/tasklist support, secure credentials handling
- Add Subtask and TaskList domain models, repositories, and REST endpoints
- Add UpdateTodoDto and CreateSubtaskDto/CreateTaskListDto
- Move application.properties to gitignore; add application.properties.example with placeholders
- Move Firebase Admin SDK JSON to gitignore pattern (*firebase-adminsdk*.json)
- Never commit DB credentials or Firebase private keys

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>